Fix style overlap

--- a/client/src/components/contents/contents-core.css
+++ b/client/src/components/contents/contents-core.css
@@ -2,7 +2,7 @@ div.create-content {
   width: 100%;
   padding: 1rem;
 }
-div.create-content p {
+div.create-content p:not(p.input-error-msg) {
   font-size: 1rem;
   color: var(--primary-black);
   line-height: 1.7;
